--- a/Новости.css
+++ b/Новости.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 5987px;
+  min-height: 7323px;
 }
 
 .u-section-1 .u-text-1 {
@@ -16,7 +16,13 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 20px 42px 0 0;
+  margin: 6px 42px 0 0;
+}
+
+.u-section-1 .u-image-1 {
+  height: 585px;
+  margin-top: 9px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -25,10 +31,28 @@
 }
 
 .u-section-1 .u-text-5 {
+  margin: 20px 9px 0 0;
+}
+
+.u-section-1 .u-text-6 {
+  width: 157px;
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 6px 42px 0 0;
+}
+
+.u-section-1 .u-text-8 {
+  width: 157px;
+  margin: 79px auto 0;
+}
+
+.u-section-1 .u-text-9 {
   margin: 9px 42px 0 0;
 }
 
-.u-section-1 .u-image-1 {
+.u-section-1 .u-image-2 {
   height: 585px;
   margin-top: 0;
   margin-bottom: 0;
@@ -39,31 +63,8 @@
   margin: 9px auto 0;
 }
 
-.u-section-1 .u-text-6 {
-  width: 157px;
-  margin: 80px auto 0;
-}
-
-.u-section-1 .u-text-7 {
-  margin: 0 42px 0 0;
-}
-
-.u-section-1 .u-image-2 {
-  height: 590px;
-  margin-top: 21px;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-text-8 {
-  width: 157px;
-  margin: 80px auto 0;
-}
-
-.u-section-1 .u-text-9 {
-  margin: 0 42px 0 0;
-}
-
 .u-section-1 .u-text-10 {
+  width: 157px;
   margin: 80px auto 0;
 }
 
@@ -71,18 +72,19 @@
   margin: 0 42px 0 0;
 }
 
+.u-section-1 .u-image-3 {
+  height: 590px;
+  margin-top: 21px;
+  margin-bottom: 0;
+}
+
 .u-section-1 .u-text-12 {
-  margin: 56px auto 0;
+  width: 157px;
+  margin: 80px auto 0;
 }
 
 .u-section-1 .u-text-13 {
   margin: 0 42px 0 0;
-}
-
-.u-section-1 .u-image-3 {
-  height: 590px;
-  margin-top: 9px;
-  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-14 {
@@ -94,65 +96,83 @@
 }
 
 .u-section-1 .u-text-16 {
-  margin: 80px auto 0;
+  margin: 56px auto 0;
 }
 
 .u-section-1 .u-text-17 {
+  margin: 0 42px 0 0;
+}
+
+.u-section-1 .u-image-4 {
+  height: 590px;
+  margin-top: 9px;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-text-18 {
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-19 {
+  margin: 0 42px 0 0;
+}
+
+.u-section-1 .u-text-20 {
+  margin: 80px auto 0;
+}
+
+.u-section-1 .u-text-21 {
   margin: 0 42px 60px 0;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 6570px;
-  }
-
   .u-section-1 .u-text-1 {
     width: auto;
     margin-top: 28px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 16px;
+    margin-top: 4px;
   }
 
   .u-section-1 .u-text-3 {
+    margin-top: 80px;
+    margin-right: 0;
+    margin-left: 260px;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -602px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -503px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: -444px;
+  }
+
+  .u-section-1 .u-text-7 {
     margin-top: 12px;
     margin-right: 263px;
   }
 
-  .u-section-1 .u-text-4 {
-    margin-top: 80px;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: auto;
-    margin-right: 189px;
-  }
-
-  .u-section-1 .u-image-1 {
-    object-position: 0% 50%;
-  }
-
-  .u-section-1 .u-text-7 {
-    width: auto;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-2 {
-    object-position: 0% 50%;
-  }
-
   .u-section-1 .u-text-8 {
-    width: 156px;
+    margin-top: 80px;
   }
 
   .u-section-1 .u-text-9 {
     width: auto;
-    margin-right: 0;
+    margin-right: 189px;
   }
 
-  .u-section-1 .u-text-10 {
-    width: auto;
+  .u-section-1 .u-image-2 {
+    object-position: 0% 50%;
   }
 
   .u-section-1 .u-text-11 {
@@ -160,17 +180,17 @@
     margin-right: 0;
   }
 
+  .u-section-1 .u-image-3 {
+    object-position: 0% 50%;
+  }
+
   .u-section-1 .u-text-12 {
-    width: auto;
+    width: 156px;
   }
 
   .u-section-1 .u-text-13 {
     width: auto;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-image-3 {
-    object-position: 0% 50%;
   }
 
   .u-section-1 .u-text-14 {
@@ -188,72 +208,117 @@
 
   .u-section-1 .u-text-17 {
     width: auto;
-    margin-bottom: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-4 {
+    object-position: 0% 50%;
+  }
+
+  .u-section-1 .u-text-18 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-19 {
+    width: auto;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-20 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-21 {
+    width: auto;
     margin-right: 0;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 7063px;
-  }
-
   .u-section-1 .u-text-2 {
-    margin-top: -501px;
+    margin-top: 497px;
   }
 
   .u-section-1 .u-text-3 {
+    margin-top: -36px;
+    margin-left: 40px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -443px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: -1470px;
+  }
+
+  .u-section-1 .u-text-7 {
     width: auto;
     margin-top: 42px;
     margin-right: 43px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-8 {
     margin-top: 557px;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-9 {
     margin-right: 0;
   }
 
-  .u-section-1 .u-text-8 {
+  .u-section-1 .u-text-12 {
     width: 179px;
   }
 
-  .u-section-1 .u-text-10 {
+  .u-section-1 .u-text-14 {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-image-3 {
+  .u-section-1 .u-image-4 {
     height: 413px;
   }
 
-  .u-section-1 .u-text-17 {
+  .u-section-1 .u-text-21 {
     margin-right: 42px;
-    margin-bottom: 56px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 7454px;
-  }
-
   .u-section-1 .u-text-2 {
-    margin-top: -605px;
+    margin-top: 888px;
   }
 
   .u-section-1 .u-text-3 {
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -710px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -463px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 40px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: -2109px;
+  }
+
+  .u-section-1 .u-text-7 {
     margin-top: 45px;
     margin-right: 0;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-8 {
     margin-top: 710px;
   }
 
-  .u-section-1 .u-image-1 {
+  .u-section-1 .u-image-2 {
     height: 285px;
   }
 
@@ -261,50 +326,62 @@
     margin-top: 19px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-10 {
     margin-top: 78px;
   }
 
-  .u-section-1 .u-image-2 {
+  .u-section-1 .u-image-3 {
     height: 288px;
   }
 
-  .u-section-1 .u-text-8 {
+  .u-section-1 .u-text-12 {
     width: 185px;
   }
 
-  .u-section-1 .u-image-3 {
+  .u-section-1 .u-image-4 {
     height: 302px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 7115px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-top: 27px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 19px;
+    margin-top: 484px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 16px;
+    margin-top: 0;
+  }
+
+  .u-section-1 .u-image-1 {
+    margin-top: -666px;
   }
 
   .u-section-1 .u-text-4 {
+    margin-top: -443px;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-top: 20px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: -1073px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 16px;
+  }
+
+  .u-section-1 .u-text-8 {
     margin-top: 56px;
   }
 
-  .u-section-1 .u-image-3 {
+  .u-section-1 .u-image-4 {
     height: 189px;
-  }
-
-  .u-section-1 .u-text-17 {
-    margin-bottom: 60px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 500px;
@@ -323,5 +400,139 @@
 @media (max-width: 767px) {
   .u-section-2 .u-text-1 {
     margin-top: 60px;
+  }
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 1818px;
+}
+
+.u-section-3 .u-text-1 {
+  width: auto;
+  margin: 27px auto 0 174px;
+}
+
+.u-section-3 .u-text-2 {
+  width: auto;
+  margin: 0 487px 0 296px;
+}
+
+.u-section-3 .u-text-3 {
+  width: auto;
+  margin: 6px -62px 0 -96px;
+}
+
+.u-section-3 .u-image-1 {
+  height: 585px;
+  width: 940px;
+  margin: 9px auto 0 -96px;
+}
+
+.u-section-3 .u-text-4 {
+  width: auto;
+  margin: 79px 487px 0 296px;
+}
+
+.u-section-3 .u-text-5 {
+  width: auto;
+  margin: 20px -96px 0;
+}
+
+.u-section-3 .u-text-6 {
+  width: auto;
+  margin: 80px 487px 0 296px;
+}
+
+.u-section-3 .u-text-7 {
+  width: auto;
+  margin: 6px -62px 54px -96px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1962px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-left: auto;
+  }
+
+  .u-section-3 .u-text-2 {
+    width: 157px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-image-1 {
+    object-position: 0% 50%;
+    margin-top: 15px;
+    margin-left: auto;
+    width: 940px;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-4 {
+    width: 157px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-top: 14px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-6 {
+    width: 157px;
+    margin-top: 86px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-7 {
+    margin: 0 0 60px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1825px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 448px;
+    width: 720px;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1713px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 336px;
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1589px;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 212px;
+    width: 340px;
   }
 }
