--- a/nicepage.css
+++ b/nicepage.css
@@ -43398,16 +43398,12 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-footer .u-text-1 {
   width: 417px;
+  font-size: 1.25rem;
   margin: 26px auto;
 }
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
     min-height: 99px;
-  }
-
-  .u-footer .u-text-1 {
-    margin-top: 28px;
-    margin-bottom: 28px;
   }
 }
 @media (max-width: 991px) {
