--- a/Windows-11-сборки.css
+++ b/Windows-11-сборки.css
@@ -69,7 +69,7 @@
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 12px auto 0;
-  padding: 10px 112px;
+  padding: 10px 124px 10px 123px;
 }
 
 .u-section-1 .u-text-4 {
@@ -388,8 +388,8 @@
   .u-section-1 .u-image-1 {
     height: 193px;
     width: 343px;
-    margin-left: -1px;
-    margin-right: -1px;
+    margin-left: -2px;
+    margin-right: -2px;
   }
 
   .u-section-1 .u-image-2 {
@@ -420,24 +420,24 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -84px;
+    margin-right: -84px;
     padding: 10px 30px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -84px;
+    margin-right: -84px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -84px;
+    margin-right: -84px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: -72px;
-    margin-right: -72px;
+    margin-left: -84px;
+    margin-right: -84px;
   }
 
   .u-section-1 .u-text-4 {
