--- a/Отзывы-и-обзоры.css
+++ b/Отзывы-и-обзоры.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 4755px;
+  min-height: 973px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,74 +11,7 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 68px 75px 0;
-}
-
-.u-section-1 .u-video-1 {
-  width: 900px;
-  height: 506px;
-  margin: 20px auto 0;
-}
-
-.u-section-1 .embed-responsive-1 {
-  position: absolute;
-}
-
-.u-section-1 .u-text-3 {
-  margin: 67px 75px 0;
-}
-
-.u-section-1 .u-video-2 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .embed-responsive-2 {
-  position: absolute;
-}
-
-.u-section-1 .u-text-4 {
-  margin: 67px 66px 0;
-}
-
-.u-section-1 .u-video-3 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .embed-responsive-3 {
-  position: absolute;
-}
-
-.u-section-1 .u-text-5 {
-  margin: 67px 85px 0;
-}
-
-.u-section-1 .u-video-4 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .embed-responsive-4 {
-  position: absolute;
-}
-
-.u-section-1 .u-text-6 {
-  width: 699px;
-  margin: 67px auto 0;
-}
-
-.u-section-1 .u-video-5 {
-  width: 900px;
-  height: 506px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .embed-responsive-5 {
-  position: absolute;
+  margin: 154px 113px 60px;
 }
 
 @media (max-width: 1199px) {
@@ -89,195 +22,27 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-video-1 {
-    margin-top: 137px;
-    margin-right: 39px;
-    margin-left: 1px;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 1px;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-left: 38px;
-    margin-right: 38px;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: 699px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 13px;
+    margin-right: 13px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 4250px;
-  }
-
-  .u-section-1 .u-video-1 {
-    width: 720px;
-    height: 405px;
-    margin-top: -166px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 405px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-video-2 {
-    width: 720px;
-    height: 405px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-video-3 {
-    width: 720px;
-    height: 405px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-5 {
-    margin-left: 11px;
-    margin-right: 11px;
-  }
-
-  .u-section-1 .u-video-4 {
-    width: 720px;
-    height: 405px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-text-6 {
-    width: auto;
-    margin-left: 11px;
-    margin-right: 11px;
-  }
-
-  .u-section-1 .u-video-5 {
-    width: 720px;
-    height: 405px;
+  .u-section-1 .u-text-2 {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 3745px;
-  }
-
   .u-section-1 .u-text-1 {
     width: auto;
-  }
-
-  .u-section-1 .u-video-1 {
-    width: 540px;
-    height: 304px;
-    margin-top: -391px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 731px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-video-2 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-video-3 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: 540px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-video-4 {
-    width: 540px;
-    height: 304px;
-  }
-
-  .u-section-1 .u-text-6 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-video-5 {
-    width: 540px;
-    height: 304px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 3180px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-video-1 {
-    width: 340px;
-    height: 191px;
-    margin-top: -847px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 1300px;
-  }
-
-  .u-section-1 .u-video-2 {
-    width: 340px;
-    height: 191px;
-  }
-
-  .u-section-1 .u-text-4 {
-    width: 265px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-video-3 {
-    width: 340px;
-    height: 191px;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: auto;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-video-4 {
-    width: 340px;
-    height: 191px;
-  }
-
-  .u-section-1 .u-video-5 {
-    width: 340px;
-    height: 191px;
   }
 }
