--- a/Обновления-для-Windows.css
+++ b/Обновления-для-Windows.css
@@ -20,13 +20,13 @@
 .u-section-1 .u-btn-2 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 47px 10px 46px;
+  padding: 10px 56px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 56px;
+  padding: 10px 47px 10px 46px;
 }
 
 .u-section-1 .u-btn-4 {
@@ -55,81 +55,107 @@
 
 .u-section-1 .u-btn-8 {
   background-image: none;
-  margin: 29px auto 0;
-  padding: 10px 39px 10px 38px;
+  margin: 8px auto 0;
+  padding: 10px 78px 10px 77px;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-14 {
   background-image: none;
   margin: 8px auto 0;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 .u-section-1 .u-btn-15 {
   background-image: none;
+  margin: 8px auto 0;
+  padding: 10px 114px 10px 113px;
+}
+
+.u-section-1 .u-btn-16 {
+  background-image: none;
+  margin: 8px auto 0;
+  padding: 10px 114px 10px 113px;
+}
+
+.u-section-1 .u-btn-17 {
+  background-image: none;
+  margin: 8px auto 0;
+  padding: 10px 114px 10px 113px;
+}
+
+.u-section-1 .u-btn-18 {
+  background-image: none;
   margin: 8px auto 60px;
-  padding: 10px 39px 10px 38px;
+  padding: 10px 114px 10px 113px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1078px;
+    min-height: 1075px;
   }
 
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 57px;
+  .u-section-1 .u-btn-8 {
+    margin-top: 57px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -5px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    margin-top: 57px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    margin-bottom: 0;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1118px;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-bottom: 60px;
+    min-height: 823px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1152px;
+    min-height: 617px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1149px;
+    min-height: 388px;
   }
 
   .u-section-1 .u-text-1 {
@@ -174,11 +200,11 @@
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: -5px;
-    margin-right: -5px;
+    margin-top: 8px;
   }
 
   .u-section-1 .u-btn-9 {
+    margin-top: 44px;
     margin-left: -5px;
     margin-right: -5px;
   }
@@ -209,6 +235,22 @@
   }
 
   .u-section-1 .u-btn-15 {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+
+  .u-section-1 .u-btn-16 {
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    margin-top: 8px;
+    margin-left: -5px;
+    margin-right: -5px;
+  }
+
+  .u-section-1 .u-btn-18 {
     margin-left: -5px;
     margin-right: -5px;
   }
