--- a/Обновления-для-Windows.css
+++ b/Обновления-для-Windows.css
@@ -1,6 +1,6 @@
  .u-section-1 {
-  background-image: url("images/windows-10-original-1366x768.jpg");
-  background-position: 100% 50%;
+  background-image: url("images/img3.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
