--- a/Windows-Lite-x32-сборки.css
+++ b/Windows-Lite-x32-сборки.css
@@ -4,63 +4,39 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3518px;
+  min-height: 5383px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 28px auto 0 199px;
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   background-image: none;
-  margin: 28px auto 0 387px;
+  width: 462px;
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-image-1 {
-  width: 901px;
+  width: 902px;
   height: 507px;
-  margin: 16px auto 0;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-image-2 {
-  width: 901px;
+  width: 902px;
   height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-3 {
-  width: 901px;
-  height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-4 {
-  width: 901px;
-  height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-5 {
-  width: 516px;
-  height: 285px;
-  object-position: 0% 50%;
-  margin: 16px auto 0 46px;
-}
-
-.u-section-1 .u-image-6 {
-  width: 516px;
-  height: 285px;
-  margin: -285px auto 0 578px;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 28px auto 0;
+  margin: 45px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 45px auto 0;
+  margin: 70px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -78,10 +54,77 @@
 }
 
 .u-section-1 .u-text-4 {
-  margin: 65px auto 0;
+  background-image: none;
+  width: 398px;
+  margin: 126px auto 0;
+}
+
+.u-section-1 .u-image-3 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-4 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-5 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-6 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-7 {
+  width: 516px;
+  height: 285px;
+  object-position: 0% 50%;
+  margin: 16px auto 0 46px;
+}
+
+.u-section-1 .u-image-8 {
+  width: 516px;
+  height: 285px;
+  margin: -285px auto 0 578px;
+}
+
+.u-section-1 .u-text-5 {
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-btn-4 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 45px auto 0;
+}
+
+.u-section-1 .u-btn-5 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-6 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
+.u-section-1 .u-text-6 {
+  margin: 65px auto 0;
+}
+
+.u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto 60px;
@@ -90,62 +133,72 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3753px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-left: auto;
+    min-height: 5641px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-left: auto;
+    margin-top: 24px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 15px;
+    margin-top: 28px;
   }
 
-  .u-section-1 .u-image-2 {
-    margin-top: 11px;
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-left: 58px;
+    margin-right: 58px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 45px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 117px;
   }
 
   .u-section-1 .u-image-3 {
-    margin-top: 529px;
+    margin-top: 9px;
   }
 
   .u-section-1 .u-image-4 {
-    margin-top: -1025px;
+    margin-top: 11px;
   }
 
   .u-section-1 .u-image-5 {
     margin-top: 529px;
-    margin-left: auto;
   }
 
   .u-section-1 .u-image-6 {
+    margin-top: -1025px;
+  }
+
+  .u-section-1 .u-image-7 {
+    margin-top: 529px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-8 {
     margin-top: 11px;
     margin-left: auto;
   }
 
-  .u-section-1 .u-text-3 {
+  .u-section-1 .u-text-5 {
     width: auto;
     margin-left: 20px;
     margin-right: 20px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     width: auto;
-    margin-top: 26px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-bottom: 59px;
+    margin-top: 70px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 3428px;
+    min-height: 5196px;
   }
 
   .u-section-1 .u-text-1 {
@@ -155,10 +208,37 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
+    margin-top: 44px;
   }
 
   .u-section-1 .u-image-1 {
+    height: 405px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    height: 405px;
+    margin-top: 13px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 29px;
+    margin-right: 29px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 118px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-3 {
     height: 405px;
     margin-top: 28px;
     margin-right: initial;
@@ -166,22 +246,6 @@
     width: auto;
   }
 
-  .u-section-1 .u-image-2 {
-    height: 405px;
-    margin-top: 12px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-3 {
-    height: 405px;
-    margin-top: 12px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
   .u-section-1 .u-image-4 {
     height: 405px;
     margin-top: 12px;
@@ -191,38 +255,50 @@
   }
 
   .u-section-1 .u-image-5 {
+    height: 405px;
     margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-6 {
+    height: 405px;
+    margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-image-7 {
     margin-top: 12px;
   }
 
-  .u-section-1 .u-text-3 {
+  .u-section-1 .u-image-8 {
+    margin-top: 12px;
+  }
+
+  .u-section-1 .u-text-5 {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-2 {
+  .u-section-1 .u-btn-5 {
     margin-top: 10px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-6 {
     margin-top: 10px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     margin-top: 45px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-bottom: 26px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2063px;
+    min-height: 4698px;
   }
 
   .u-section-1 .u-text-1 {
@@ -230,18 +306,36 @@
     margin-right: 30px;
   }
 
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 28px;
+    margin-left: 39px;
+    margin-right: 39px;
+  }
+
   .u-section-1 .u-image-1 {
     height: 304px;
+    margin-top: 10px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-image-2 {
-    height: 303px;
+    height: 304px;
+    margin-top: 12px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 115px;
   }
 
   .u-section-1 .u-image-3 {
@@ -252,6 +346,20 @@
   }
 
   .u-section-1 .u-image-4 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-5 {
+    height: 304px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-6 {
     height: 305px;
     width: 542px;
     margin-left: -1px;
@@ -261,7 +369,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1417px;
+    min-height: 4012px;
   }
 
   .u-section-1 .u-text-1 {
@@ -270,12 +378,14 @@
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 31px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-image-1 {
     height: 191px;
+    margin-top: 28px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -288,11 +398,38 @@
     margin-left: initial;
   }
 
+  .u-section-1 .u-text-3 {
+    margin-left: -9px;
+    margin-right: -9px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-btn-3 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 114px;
+  }
+
   .u-section-1 .u-image-3 {
     height: 191px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-4 {
@@ -303,31 +440,58 @@
   }
 
   .u-section-1 .u-image-5 {
-    height: 188px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    height: 191px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-6 {
+    height: 191px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-7 {
     height: 188px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-image-8 {
+    height: 188px;
+    width: 340px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+    margin-top: 20px;
     margin-left: -68px;
     margin-right: -68px;
   }
 
-  .u-section-1 .u-btn-2 {
+  .u-section-1 .u-btn-5 {
+    align-self: center;
     margin-left: -68px;
     margin-right: -68px;
   }
 
-  .u-section-1 .u-btn-3 {
+  .u-section-1 .u-btn-6 {
+    align-self: center;
     margin-left: -68px;
     margin-right: -68px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-bottom: 28px;
   }
 }
