--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1627px;
+  min-height: 1410px;
 }
 
 .u-section-1 .u-text-1 {
@@ -261,173 +261,81 @@
   margin: 220px auto 0;
 }
 
-.u-section-1 .u-gallery-2 {
-  height: 360px;
-  width: 640px;
-  margin: 10px auto 60px;
-}
-
-.u-section-1 .u-carousel-indicators-2 {
-  position: absolute;
-  width: auto;
-  height: auto;
-  top: auto;
-  bottom: -21px;
-}
-
-.u-section-1 .u-carousel-item-11 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-11 {
+.u-section-1 .u-btn-5 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: 20px auto 0 183px;
+  padding: 11px 16px 12px;
 }
 
-.u-section-1 .u-over-slide-11 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-12 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-12 {
+.u-section-1 .u-btn-6 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 0;
+  padding: 11px 45px 12px 44px;
 }
 
-.u-section-1 .u-over-slide-12 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-13 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-13 {
+.u-section-1 .u-btn-7 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 0 682px;
+  padding: 11px 31px 12px;
 }
 
-.u-section-1 .u-back-image-13 {
-  object-position: 27.68% 50%;
-}
-
-.u-section-1 .u-over-slide-13 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-14 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-14 {
+.u-section-1 .u-btn-8 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: 10px auto 0 183px;
+  padding: 11px 22px 12px 21px;
 }
 
-.u-section-1 .u-over-slide-14 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-15 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-15 {
+.u-section-1 .u-btn-9 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 0 386px;
+  padding: 11px 22px 12px 21px;
 }
 
-.u-section-1 .u-back-image-15 {
-  object-position: 100% 50%;
-}
-
-.u-section-1 .u-over-slide-15 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-16 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.u-section-1 .u-back-slide-16 {
+.u-section-1 .u-btn-10 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 0 566px;
+  padding: 11px 22px 12px 21px;
 }
 
-.u-section-1 .u-over-slide-16 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-17 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-}
-
-.u-section-1 .u-back-slide-17 {
+.u-section-1 .u-btn-11 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 0 734px;
+  padding: 11px 14px 12px 12px;
 }
 
-.u-section-1 .u-over-slide-17 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-item-18 {
-  margin-right: 0;
-  --effect-scale: 1.25;
-}
-
-.u-section-1 .u-back-slide-18 {
+.u-section-1 .u-btn-12 {
   background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: 10px auto 0 259px;
+  padding: 11px 55px 12px 53px;
 }
 
-.u-section-1 .u-over-slide-18 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5));
-  padding: 30px;
-}
-
-.u-section-1 .u-carousel-control-3 {
-  position: absolute;
-  left: -78px;
-  width: 40px;
-  height: 40px;
-  right: auto;
-  padding: 10px;
-}
-
-.u-section-1 .u-carousel-control-4 {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  left: auto;
-  right: -78px;
-  padding: 10px;
+.u-section-1 .u-btn-13 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  font-size: 0.875rem;
+  margin: -45px auto 60px 544px;
+  padding: 11px 55px 12px 53px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1655px;
+    min-height: 1421px;
   }
 
   .u-section-1 .u-text-1 {
@@ -458,11 +366,43 @@
     margin-left: 60px;
     margin-right: 60px;
   }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: 82px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-left: 583px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-left: 82px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-left: 286px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 467px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-left: 635px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-left: 159px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-left: 444px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1720px;
+    min-height: 1601px;
   }
 
   .u-section-1 .u-text-2 {
@@ -505,18 +445,54 @@
     margin-right: 14px;
   }
 
-  .u-section-1 .u-carousel-control-3 {
-    left: -60px;
+  .u-section-1 .u-btn-5 {
+    margin-left: 115px;
   }
 
-  .u-section-1 .u-carousel-control-4 {
-    right: -60px;
+  .u-section-1 .u-btn-6 {
+    margin-left: 401px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: 9px;
+    margin-left: 49px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-top: 9px;
+    margin-left: 39px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -99px;
+    margin-left: 335px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-left: 514px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-top: 9px;
+    margin-left: 241px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-top: -45px;
+    margin-left: 473px;
+    padding-right: 21px;
+    padding-left: 20px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-top: 9px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1851px;
+    min-height: 1785px;
   }
 
   .u-section-1 .u-text-2 {
@@ -558,22 +534,49 @@
     margin-right: 0;
   }
 
-  .u-section-1 .u-gallery-2 {
-    width: 540px;
+  .u-section-1 .u-btn-5 {
+    margin-left: 25px;
   }
 
-  .u-section-1 .u-carousel-control-3 {
-    left: -47px;
+  .u-section-1 .u-btn-6 {
+    margin-left: 311px;
   }
 
-  .u-section-1 .u-carousel-control-4 {
-    right: -47px;
+  .u-section-1 .u-btn-7 {
+    margin-left: 238px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-top: 63px;
+    margin-left: 282px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -153px;
+    margin-left: 59px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-top: 9px;
+    margin-left: 76px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-top: -45px;
+    margin-left: 242px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-top: 9px;
+    margin-left: 65px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1434px;
+    min-height: 1703px;
   }
 
   .u-section-1 .u-text-1 {
@@ -635,11 +638,65 @@
     margin-top: 129px;
   }
 
-  .u-section-1 .u-gallery-2 {
-    height: 220px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-1 .u-btn-5 {
+    margin-left: auto;
+    padding-right: 19px;
+    padding-left: 18px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 10px;
+    margin-left: auto;
+    padding-right: 83px;
+    padding-left: 82px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: 65px;
+    margin-left: auto;
+    padding-right: 34px;
+    padding-left: 33px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-top: 175px;
+    margin-left: auto;
+    padding-right: 65px;
+    padding-left: 65px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-top: -320px;
+    margin-left: auto;
+    padding-right: 77px;
+    padding-left: 76px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-top: 120px;
+    margin-left: auto;
+    padding-right: 83px;
+    padding-left: 83px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-top: -100px;
+    margin-left: auto;
+    padding-right: 42px;
+    padding-left: 41px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-top: 65px;
+    margin-left: auto;
+    padding-right: 57px;
+    padding-left: 56px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-top: 65px;
+    padding-right: 26px;
+    padding-left: 25px;
   }
 } .u-section-2 {
   background-image: none;
