--- a/Windows-Lite-x32-сборки.css
+++ b/Windows-Lite-x32-сборки.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 5383px;
+  min-height: 7337px;
 }
 
 .u-section-1 .u-text-1 {
@@ -30,13 +30,13 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 45px auto 0;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-btn-1 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 70px auto 0;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -55,55 +55,30 @@
 
 .u-section-1 .u-text-4 {
   background-image: none;
-  width: 398px;
-  margin: 126px auto 0;
+  width: 462px;
+  margin: 103px auto 0;
 }
 
 .u-section-1 .u-image-3 {
-  width: 901px;
+  width: 902px;
   height: 507px;
-  margin: 16px auto 0;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-image-4 {
-  width: 901px;
+  width: 902px;
   height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-5 {
-  width: 901px;
-  height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-6 {
-  width: 901px;
-  height: 507px;
-  margin: 16px auto 0;
-}
-
-.u-section-1 .u-image-7 {
-  width: 516px;
-  height: 285px;
-  object-position: 0% 50%;
-  margin: 16px auto 0 46px;
-}
-
-.u-section-1 .u-image-8 {
-  width: 516px;
-  height: 285px;
-  margin: -285px auto 0 578px;
+  margin: 20px auto 0;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 28px auto 0;
+  margin: 45px auto 0;
 }
 
 .u-section-1 .u-btn-4 {
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 45px auto 0;
+  margin: 70px auto 0;
 }
 
 .u-section-1 .u-btn-5 {
@@ -121,10 +96,77 @@
 }
 
 .u-section-1 .u-text-6 {
-  margin: 65px auto 0;
+  background-image: none;
+  width: 398px;
+  margin: 126px auto 0;
+}
+
+.u-section-1 .u-image-5 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-6 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-7 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-8 {
+  width: 901px;
+  height: 507px;
+  margin: 16px auto 0;
+}
+
+.u-section-1 .u-image-9 {
+  width: 516px;
+  height: 285px;
+  margin: 16px auto 0 578px;
+}
+
+.u-section-1 .u-image-10 {
+  width: 516px;
+  height: 285px;
+  object-position: 0% 50%;
+  margin: -285px auto 0 46px;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 28px auto 0;
 }
 
 .u-section-1 .u-btn-7 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 45px auto 0;
+}
+
+.u-section-1 .u-btn-8 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 41px;
+}
+
+.u-section-1 .u-btn-9 {
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  background-image: none;
+  margin: 9px auto 0;
+  padding: 10px 43px 10px 42px;
+}
+
+.u-section-1 .u-text-8 {
+  margin: 65px auto 0;
+}
+
+.u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   margin: 0 auto 60px;
@@ -133,64 +175,73 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5641px;
+    min-height: 6050px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 24px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: 28px;
+    margin-top: -1507px;
   }
 
   .u-section-1 .u-text-3 {
+    margin-left: 92px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: -159px;
+  }
+
+  .u-section-1 .u-image-3 {
+    margin-top: 28px;
+  }
+
+  .u-section-1 .u-text-5 {
     width: auto;
     margin-left: 58px;
     margin-right: 58px;
   }
 
-  .u-section-1 .u-btn-1 {
+  .u-section-1 .u-btn-4 {
     margin-top: 45px;
   }
 
-  .u-section-1 .u-text-4 {
+  .u-section-1 .u-text-6 {
     margin-top: 117px;
   }
 
-  .u-section-1 .u-image-3 {
+  .u-section-1 .u-image-5 {
     margin-top: 9px;
   }
 
-  .u-section-1 .u-image-4 {
-    margin-top: 11px;
-  }
-
-  .u-section-1 .u-image-5 {
-    margin-top: 529px;
-  }
-
   .u-section-1 .u-image-6 {
-    margin-top: -1025px;
+    margin-top: 11px;
   }
 
   .u-section-1 .u-image-7 {
     margin-top: 529px;
-    margin-left: auto;
   }
 
   .u-section-1 .u-image-8 {
-    margin-top: 11px;
+    margin-top: -1025px;
+  }
+
+  .u-section-1 .u-image-9 {
+    margin-top: 825px;
     margin-left: auto;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-image-10 {
+    margin-top: -581px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-text-7 {
     width: auto;
+    margin-top: 324px;
     margin-left: 20px;
     margin-right: 20px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-8 {
     width: auto;
     margin-top: 70px;
   }
@@ -198,7 +249,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 5196px;
+    min-height: 3818px;
   }
 
   .u-section-1 .u-text-1 {
@@ -208,7 +259,7 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 44px;
+    margin-top: -2054px;
   }
 
   .u-section-1 .u-image-1 {
@@ -220,27 +271,27 @@
 
   .u-section-1 .u-image-2 {
     height: 405px;
-    margin-top: 13px;
+    margin-top: 122px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 29px;
-    margin-right: 29px;
+    margin-top: 102px;
+    margin-left: 0;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -5px;
   }
 
   .u-section-1 .u-text-4 {
-    width: auto;
-    margin-top: 118px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 428px;
   }
 
   .u-section-1 .u-image-3 {
     height: 405px;
-    margin-top: 28px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -248,15 +299,27 @@
 
   .u-section-1 .u-image-4 {
     height: 405px;
-    margin-top: 12px;
+    margin-top: 13px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
+  .u-section-1 .u-text-5 {
+    margin-left: 29px;
+    margin-right: 29px;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+    margin-top: 118px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
   .u-section-1 .u-image-5 {
     height: 405px;
-    margin-top: 12px;
+    margin-top: 28px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -271,34 +334,55 @@
   }
 
   .u-section-1 .u-image-7 {
+    height: 405px;
     margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-1 .u-image-8 {
+    height: 405px;
     margin-top: 12px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-image-9 {
+    margin-top: 309px;
+  }
+
+  .u-section-1 .u-image-10 {
+    margin-top: -582px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 325px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-8 {
     margin-top: 10px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-9 {
     margin-top: 10px;
   }
 
-  .u-section-1 .u-text-6 {
+  .u-section-1 .u-text-8 {
     margin-top: 45px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-bottom: 0;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4698px;
+    min-height: 3010px;
   }
 
   .u-section-1 .u-text-1 {
@@ -307,15 +391,11 @@
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 28px;
-    margin-left: 39px;
-    margin-right: 39px;
+    margin-top: -598px;
   }
 
   .u-section-1 .u-image-1 {
     height: 304px;
-    margin-top: 10px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -323,33 +403,51 @@
 
   .u-section-1 .u-image-2 {
     height: 304px;
-    margin-top: 12px;
+    margin-top: 223px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: 203px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: -55px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 115px;
+    width: auto;
+    margin-top: 931px;
+    margin-left: 39px;
+    margin-right: 39px;
   }
 
   .u-section-1 .u-image-3 {
     height: 304px;
+    margin-top: 10px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
-    height: 303px;
+    height: 304px;
+    margin-top: 12px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 115px;
   }
 
   .u-section-1 .u-image-5 {
@@ -360,6 +458,20 @@
   }
 
   .u-section-1 .u-image-6 {
+    height: 303px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-7 {
+    height: 304px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-image-8 {
     height: 305px;
     width: 542px;
     margin-left: -1px;
@@ -369,23 +481,23 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 4012px;
+    min-height: 1912px;
   }
 
   .u-section-1 .u-text-1 {
+    margin-top: 4022px;
     margin-left: 20px;
     margin-right: 20px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 31px;
-    margin-left: 0;
-    margin-right: 0;
+    width: 340px;
+    margin-top: -3125px;
   }
 
   .u-section-1 .u-image-1 {
     height: 191px;
-    margin-top: 28px;
+    margin-top: -9px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
@@ -393,50 +505,66 @@
 
   .u-section-1 .u-image-2 {
     height: 191px;
+    margin-top: 336px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-1 .u-text-3 {
-    margin-left: -9px;
-    margin-right: -9px;
+    margin-top: 316px;
   }
 
   .u-section-1 .u-btn-1 {
-    align-self: center;
-    margin-left: -91px;
-    margin-right: -91px;
-  }
-
-  .u-section-1 .u-btn-2 {
-    align-self: center;
-    margin-left: -91px;
-    margin-right: -91px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    align-self: center;
-    margin-left: -91px;
-    margin-right: -91px;
+    margin-top: -155px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 114px;
+    margin-top: 1494px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
     height: 191px;
-    width: 340px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 28px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    width: 340px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-text-5 {
+    margin-left: -9px;
+    margin-right: -9px;
+  }
+
+  .u-section-1 .u-btn-4 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    align-self: center;
+    margin-left: -91px;
+    margin-right: -91px;
+  }
+
+  .u-section-1 .u-text-6 {
+    margin-top: 114px;
   }
 
   .u-section-1 .u-image-5 {
@@ -454,44 +582,57 @@
   }
 
   .u-section-1 .u-image-7 {
-    height: 188px;
+    height: 191px;
     width: 340px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-image-8 {
-    height: 188px;
+    height: 191px;
     width: 340px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-image-9 {
+    height: 188px;
+    width: 340px;
+    margin-top: 212px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-image-10 {
+    height: 188px;
+    width: 340px;
+    margin-top: -388px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-top: 228px;
     margin-left: 10px;
     margin-right: 10px;
   }
 
-  .u-section-1 .u-btn-4 {
+  .u-section-1 .u-btn-7 {
     align-self: center;
     margin-top: 20px;
     margin-left: -68px;
     margin-right: -68px;
   }
 
-  .u-section-1 .u-btn-5 {
+  .u-section-1 .u-btn-8 {
     align-self: center;
     margin-left: -68px;
     margin-right: -68px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-9 {
     align-self: center;
     margin-left: -68px;
     margin-right: -68px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-bottom: 28px;
   }
 }
